--- a/fonts/flaticon/flaticon.css
+++ b/fonts/flaticon/flaticon.css
@@ -75,6 +75,7 @@ margin-left: 0px;
 .flaticon-tool:before { content: "\f12b"; }
 .flaticon-tool-1:before { content: "\f12c"; }
 .flaticon-word:before { content: "\f12d"; }
+.flaticon-mail:before { content: "\f13a"; }
 
 .flaticon-flash:before { content: "\f100"; }
 .flaticon-wrench:before { content: "\f101"; }
