--- a/css/style.css
+++ b/css/style.css
@@ -200,7 +200,7 @@ input:-webkit-autofill:focus {
   color: #0e122c;
   font-size: 30px;
   font-weight: 600;
-  line-height: 36px;
+  line-height: 54px;
   text-transform: uppercase;
   margin-top: -7px;
 }
@@ -434,7 +434,7 @@ select:focus {
   padding-bottom: 64px;
   padding-top: 40px;
 }
-.header-image{
+.header-image {
   height: 40px !important;
 }
 .header-area span.header-heading {
@@ -1735,27 +1735,28 @@ select:focus {
   background: #f7f7f7;
 }
 .brand-area .brand .owl-stage-outer {
-  z-index: 10;
+  z-index: 5;
 }
 .brand-area .brand .single-item {
   border: 1px dashed #dadada;
-  height: 105px;
+  /* height: 105px; */
   -webkit-transition: all 300ms ease-in 0s;
   transition: all 300ms ease-in 0s;
   text-align: center;
 }
 .brand-area .brand .single-item img {
   display: inline-block;
-  max-width: 100% !important;
+  max-width: 150px !important;
+  height: 150px;
   opacity: 1;
-  padding: 35px 0;
+  /* padding: 35px 0; */
   position: relative;
   -webkit-transition: all 300ms ease-in 0s;
   transition: all 300ms ease-in 0s;
   width: auto !important;
 }
 .brand-area .brand .single-item:hover {
-  border: 1px dashed #fdc716;
+  border: 1px dashed #0e122c;
 }
 .brand-area .brand .single-item:hover img {
   opacity: 0.6;
@@ -1833,7 +1834,7 @@ select:focus {
   margin: 0 0 35px;
   overflow: hidden;
 }
-.footer-logo img{
+.footer-logo img {
   height: 70px !important;
 }
 .single-footer-widget .industry-info {
@@ -5128,4 +5129,34 @@ single-product-item:hover .img-holder img {
 
 .mt-1 {
   margin-top: 1% !important;
+}
+
+.ml-2 {
+  margin-top: 2% !important;
+}
+
+.button--loading::after {
+  content: "";
+  position: absolute;
+  width: 16px;
+  height: 16px;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  border: 4px solid transparent;
+  border-top-color: #ffffff;
+  border-radius: 50%;
+  animation: button-loading-spinner 1s ease infinite;
+}
+
+@keyframes button-loading-spinner {
+  from {
+      transform: rotate(0turn);
+  }
+
+  to {
+      transform: rotate(1turn);
+  }
 }
