--- a/css/responsive.css
+++ b/css/responsive.css
@@ -933,6 +933,10 @@
   padding-right: 0;
 }
 
+.send-message {
+  margin-top: 40px !important;
+  margin-bottom: 20px !important;
+}
     
     
     
@@ -952,9 +956,11 @@
 /* Wide Mobile Layout: 480px. */
 @media only screen and (min-width: 480px) and (max-width: 767px) {
 
-    
  
-    
+    .send-message {
+      margin-top: 40px !important;
+      margin-bottom: 20px !important;
+    }
     
     
     
