--- a/css/style.css
+++ b/css/style.css
@@ -5358,6 +5358,10 @@ single-product-item:hover .img-holder img {
   margin-top: 1% !important;
 }
 
+.mt-2 {
+  margin-top: 2% !important;
+}
+
 .ml-2 {
   margin-top: 2% !important;
 }
